Fix: Fixed trio image breakpoints and alignment.

--- a/css/_moi.scss
+++ b/css/_moi.scss
@@ -5,6 +5,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
   background-color: #fff;
   border-top: 8vmin solid #fff;
   border-right: 6vmin solid #fff;
@@ -33,13 +34,13 @@
     }
   }
 
-  @media only screen and (min-width: 601px) {
+  @media only screen and (min-width: 551px) {
     img {
       height: 80vmin;
     }
   }
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 550px) {
     margin-left: -0.1vmin;
 
     img {
